--- a/CreateActivity.resx
+++ b/CreateActivity.resx
@@ -576,6 +576,9 @@
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>1049, 618</value>
   </data>
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Vytvoriť aktivitu</value>
   </data>
